Fix false scroll on mobile front side by removing min-height: 100vh

--- a/note-types/css.css
+++ b/note-types/css.css
@@ -64,10 +64,12 @@ html {
 @media (hover: none) {
     html {
         background: var(--bg) !important;
+        min-height: auto;
     }
 
     .card {
         background: var(--bg) !important;
+        min-height: auto;
     }
 
     .card-inner::before {
